bdr.BDR2.scala.error
Erreur de compilation :
BDR2:9: error: not found: value inverse
    case "I" => inverse(); avance();
                ^